[gd_scene load_steps=3 format=3 uid="uid://btyidkcjeiw6u"]

[ext_resource type="Script" path="res://modules/general_setting_panel/src/main/GSP_PageElement/GSP_PageElement.gd" id="1_vymvq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8y61"]
bg_color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="GSP_PageElement" type="MarginContainer"]
custom_minimum_size = Vector2(200, 30)
offset_bottom = 30.0
size_flags_horizontal = 3
script = ExtResource("1_vymvq")

[node name="BG" type="Panel" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b8y61")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
